# EvalBracket

./: .gitignore  PAPER_DRAFT.md  README.md  RESULTS.md  REVIEW.md  pyproject.toml  requirements.txt
.codebase-memory/: artifact.json  graph.db.zst
config/: evalbracket.template.json  policy-catalog.template.json
data/: disclosure_gap_audit_open_weight_2026-07-18.csv
data_snapshot/: arms.jsonl  existence_proof_9models.txt  fleet_logs.txt  maturation_traj.jsonl  pairs.jsonl  pairs2_disjoint_diverse.jsonl  pairs4_fleet.jsonl  pairs_arms3.jsonl  pairs_resist.jsonl  pairs_resist2.jsonl  pairs_resist3.jsonl  pairs_resist_all.jsonl  pythia_1.4b.jsonl  pythia_2.8b.jsonl  pythia_2.8b_log.txt  pythia_sciq.jsonl
docs/: access_conditioned_protocol.md  case_study_systemcards.md  critique_phase1.md  disclosure_gap_audit_2026-07-18.md  eval_awareness_prior_art.md  eval_validity_interval_protocol_v0.md  evalbracket_v0.1_formal_spec.md  evalbracket_v1_protocol.md  evalbracket_v2_protocol.md  lesswrong_evalbracket_post.md  lesswrong_evalbracket_post_v2.md  maturation_design.md  project_inputs_and_evidence.md  provider_lab_evidence_status_2026-07-18.md  systemcard_feasibility.md
evalbracket-deck/: EvalBracket_Compact_Internal_RAI_Overview_v4.pptx  EvalBracket_Internal_RAI_Pilot_Proposal_Polished_Light_v21_Core_Analogy.pptx  EvalBracket_Internal_RAI_Pilot_Proposal_Polished_v10.pptx  build_deck.py  deck.html  index.html  meta.json  package.json
evalbracket-video/: .gitignore  _mk_vo.sh  audio_meta.json  audio_request.json  index.html  meta.json  package.json  timing.json  (+1 more)
(+275 files in other folders)
