[project]
name = "evalbracket"
version = "0.1.0"
description = "Recover true model capability under eval-awareness as a calibrated [floor, ceiling] interval."
requires-python = ">=3.11"
dependencies = ["numpy>=2.0", "scipy>=1.13", "scikit-learn>=1.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["evalbracket"]
